--- a/mkdebian/debian/changelog
+++ b/mkdebian/debian/changelog
@@ -1,10 +1,17 @@
 asfvolt16 (2.6.0.1+edgecore-V201805281625) stable; urgency=high
 
     * Based on code from SW-BCM68620_2_6_0_1.zip.
-    * Merged the Accton's fixed done in ACCTON_BAL_2.4.7.12-V201805281625.patch.
+    * Merged the Accton's fixed done in ACCTON_BAL_2.4.7.12-V201712061142.patch.
     * To increase the stack size to 2M to avoid segment fault while init bcm.user code.
     * To modify the BALAPI_OPER_TIMEOUT from 5 to 10 seconds to avoid timeout warning message.
+    * Feature to implement the LED function, as the maple is downloaded,
+      - 1-1. Link LED off=> XGS-PON Port is not ready.
+      - 1-2. Link LED on solid=> XGS-PON Port is enable and XFP plugged.
+      - 2-1. Act LED off =>all registered ONT is absent.
+      - 2-2. Act LED on solid=> at least one of ONT is registered.
+      - 2-3. Act LED is flashing=> at least one of ONT is registered and traffic.
+    * Modify that ASFVOLT16 Board not to check the FPGA/CPLD version information in bal_cli
     * Patch file name: ACCTON_BAL_2.6.0.1-V201805281625.patch
 
- -- Jason Huang <jasonsc_huang@edge-core.com>  Thu, 31 May 2018 10:36:32 +0800
+ --  JC Yu <jcyu@edge-core.com>  Thu, 20 Sep 2018 12:33:07 +0800
 
